API の operationId を整理
