# apps/backend/api-spec/frontend.api-spec.json
@@ -3,7 +3,7 @@
   "paths": {
     "/api/v1/headline-topic-programs/{id}": {
       "get": {
-        "operationId": "ApiV1_getHeadlineTopicProgram",
+        "operationId": "getHeadlineTopicProgram",
         "parameters": [
           {
             "name": "id",
@@ -36,6 +36,9 @@
           },
           "400": {
             "description": "Bad request"
+          },
+          "404": {
+            "description": "Not found"
           }
         },
         "summary": "指定のヘッドライントピック番組を取得する",
@@ -46,7 +49,7 @@
     },
     "/api/v1/headline-topic-programs/count": {
       "get": {
-        "operationId": "ApiV1_getHeadlineTopicProgramsCounts",
+        "operationId": "getHeadlineTopicProgramsCount",
         "parameters": [
           {
             "name": "x-api-key",
@@ -74,7 +77,7 @@
     },
     "/api/v1/headline-topic-programs": {
       "get": {
-        "operationId": "ApiV1_getHeadlineTopicPrograms",
+        "operationId": "getHeadlineTopicProgramList",
         "parameters": [
           {
             "name": "x-api-key",
